# arbitrage_scanner

./: Cargo.toml  README.md  analysis.html  analysis.ipynb  arbitrage_trades_ch.sql  docker-compose.yml
src/: main.rs
src/utils/: api.rs  downloader.rs  mod.rs  parser.rs
