[package]
name = "arbitrage_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "2.0.4"
solana-sdk = "2.0.4"
serde_json = "1.0"
futures = "0.3"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.97"
solana-transaction-status-client-types = "2.2.1"
solana-commitment-config = "2.2.1"
ahash = "0.8.11"
chrono = "0.4.40"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
clickhouse = "0.13.1"
